--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,7 +22,7 @@
     "selectedView": "file-tree"
   },
   "fileWatcher": {
-    "enabled": true,
+    "enabled": false,
     "watchedExtensions": [
       "less",
       "sass",
@@ -75,7 +75,7 @@
     "scroll": true
   },
   "live-reload": {
-    "enable": true,
+    "enable": false,
     "animate": true,
     "delay": 0
   },
